// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation Utils show validation errors should render correctly 1`] = `
<InputGroupText>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <List
        style={
          Object {
            "color": "white",
          }
        }
      >
        <ListItem>
          "B" should have a length of at least 3
        </ListItem>
      </List>
    }
    distance={15}
    enableFlip={true}
    entryDelay={500}
    exitDelay={500}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <WarningTriangleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Tooltip>
</InputGroupText>
`;

exports[`Validation Utils show validation errors should render correctly 2`] = `
<InputGroupText>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <List
        style={
          Object {
            "color": "white",
          }
        }
      >
        <ListItem>
          "B" should start with "A"
        </ListItem>
      </List>
    }
    distance={15}
    enableFlip={true}
    entryDelay={500}
    exitDelay={500}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <WarningTriangleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Tooltip>
</InputGroupText>
`;

exports[`Validation Utils show validation errors should render correctly 3`] = `
<InputGroupText>
  <Tooltip
    appendTo={[Function]}
    aria="describedby"
    boundary="window"
    className=""
    content={
      <List
        style={
          Object {
            "color": "white",
          }
        }
      >
        <ListItem>
          "B" should start with "A"
        </ListItem>
        <ListItem>
          "B" should have a length of at least 3
        </ListItem>
      </List>
    }
    distance={15}
    enableFlip={true}
    entryDelay={500}
    exitDelay={500}
    flipBehavior={
      Array [
        "top",
        "right",
        "bottom",
        "left",
        "top",
        "right",
        "bottom",
      ]
    }
    id=""
    isAppLauncher={false}
    isContentLeftAligned={false}
    isVisible={false}
    maxWidth="18.75rem"
    position="top"
    tippyProps={Object {}}
    trigger="mouseenter focus"
    zIndex={9999}
  >
    <WarningTriangleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Tooltip>
</InputGroupText>
`;
